--- a/particle-client/.vscode/settings.json
+++ b/particle-client/.vscode/settings.json
@@ -56,5 +56,6 @@
         "cinttypes": "cpp"
     },
     "particle.targetPlatform": "argon",
-    "particle.firmwareVersion": "1.4.3"
+    "particle.firmwareVersion": "1.4.3",
+    "particle.targetDevice": ""
 }
